# punix

./: .gitignore  CMakeLists.txt  Makefile  app.ld  boot.asm  bootsector.asm  disk.img  kernel.asm  kernel.c  linker.ld  loader.asm  readme.txt
apps/: cat.c  cd.c  date.c  echo.c  init.c  kill.c  libc.c  loop.c  ls.c  print_env.c  ps.c  pwd.c  sh.c  spawn_chain.c  swapper.c  test_args.c  time.c  tty.c
arch/x86/: clock.c  console.c  console_vesa.c  console_vga.c  gdt.c  irq.c  keyboard.c  kpremain.asm  libc.c  mm.c  panic.c  sched.asm  syscall.asm  syscall.c  vm.c
arch/x86/boot/: loader.asm
arch/x86/include/: exc_stub.h  gdt.h  io.h  irq.h  syscall_arch.h
boot/: loader.asm
boot/arch/x86/: bootsector.asm  loader.asm
drivers/: console.c
fs/: bin_fs.c  dev_fs.c  files.c  fs_util.c  proc_fs.c  root_fs.c  sys_fs.c  vfs.c
include/: dirent.h  errno.h  fcntl.h  libc.h  readme.txt  stat.h  stddef.h  stdio.h  stdlib.h  string.h  unistd.h
include/kernel/: api.h  clock.h  config.h  console.h  constants.h  cpu_ctx.h  dev.h  dirent.h  dlist.h  elf.h  elf_loader.h  entry.h  file.h  files.h  fs_util.h  gdt.h  interrupt.h  irq.h  irq_stub.h  kernel_api.h  keyboard.h  kutils.h  libc.h  limts.h  mm.h  panic.h  sched.h  sys_calls.h  syscall.h  syscalls.h  task_slab.h  task_table.h  time.h  tty.h  vfs.h  vga.h  vm.h  wait.h
include/sys/: types.h
kernel/: init.c  interrupt.c  interrupt.h  io.c  kernel.c  keyboard.c  keyboard.h  loop.c  process.h  process0.c  process1.c  process2.c  ps.c  sched.asm  sched.c  sched.h  sched_x86.asm  screen.c  screen.h  switch_to.asm  syscalls.h  test_args.c  vga.c  vga.h
kernel/arch/x86/: irq_x86.c  sched.asm  sched_x86.asm
kernel/core/: console.c  elf.c  elf_loader.c  files.c  gdt.c  interrupt.c  io.c  kernel.c  kernel_api.c  ktils.c  kutils.c  libc.c  mm.c  sched.c  sys_calls.c  syscall.c  task_slab.c  task_table.c  tty.c  vfs.c  wait.c
kernel/core/fs/: bin_fs.c  dev_fs.c  proc_fs.c  root_fs.c  vfs.c
kernel/drivers/: console.c  keyboard.c  vga.c
kernel/drivers/arch/x86/: keyboard_x86.c
libs/: libc.c
